syntax = "proto3";

package inventory;

service InventoryService {
  rpc GetItemById (ItemRequest) returns (ItemResponse);
  rpc GetAllItems (Empty) returns (ItemList);
  rpc AddItem (AddItemRequest) returns (ItemResponse);
  rpc DeleteItem (ItemRequest) returns (DeleteItemResponse);
}

// ===== Message Definitions =====

message Empty {}

message ItemRequest {
  int32 id = 1;
}

message AddItemRequest {
  string name = 1;
}

message ItemResponse {
  int32 id = 1;
  string name = 2;
}

message ItemList {
  repeated ItemResponse items = 1;
}

message DeleteItemResponse {
  bool success = 1;
}
